--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "badmus",
+  "name": "tempo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ashrofdev.github.io/badmus"
+  "homepage": "https://ashrofdev.github.io/tempo"
 }
